# Proyecto-Codigo-Limpio

./: .env  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
 user-guide/commands/: index.html
 user-guide/persistence/: index.html
.github/workflows/: docs.yml  tests.yml
api/: main.py
api/routers/: alquileres.py  clientes.py  vehiculos.py
architecture/: index.html
data/: database.json
database/: index.html
docs/: architecture.md  database.md  getting-started.md  index.md  reference.md
docs/images/: imagenes
docs/user-guide/: commands.md  persistence.md
getting-started/: index.html
images/: imagenes
reference/: index.html
schemas/: alquiler.py  cliente.py  vehiculo_schema.py
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/architecture/: index.html
site/getting-started/: index.html
site/reference/: index.html
site/search/: search_index.json
site/user-guide/commands/: index.html
site/user-guide/persistence/: index.html
src/mi_app/: exceptions.py  models.py  services.py  storage.py
tests/: test_service.py
user-guide/commands/: index.html
user-guide/persistence/: index.html
