[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project]
name = "mi_app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "typer>=0.24.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
